[package]
name = "prevent_drop"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Prevent values of a type from being implicitly dropped."
homepage = "https://github.com/mickvangelderen/prevent_drop"
repository = "https://github.com/mickvangelderen/prevent_drop"
readme = "README.md"
keywords = ["prevent", "drop", "compile-time", "static"]
categories = ["rust-patterns"]
build = "build.rs"

[features]
default = []
abort = []
panic = []

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
